fix: update mobile styling for work buttons for better visibility

--- a/src/styles/work.css
+++ b/src/styles/work.css
@@ -165,19 +165,17 @@
 	.work-description-container {
 		width: auto;
 	}
-	
+
 	.line {
 		display: none;
 	}
 
 	.buttons-container {
 		margin: 0;
-		width: calc(100vw - 4rem);
 		overflow-x: scroll;
 		display: flex;
 		flex-direction: row;
 		justify-content: flex-start;
-		gap: 1rem;
 	}
 
 	.button-wrapper {
@@ -187,9 +185,16 @@
 		min-width: unset;
 		border: 1px solid var(--bg-secondary);
 		background-color: var(--bg-secondary);
-		border-radius: 1rem;
 		padding: 0.5rem 1rem;
 		white-space: nowrap;
+	}
+
+	.button-wrapper:first-child {
+		border-radius: 1rem 0 0 1rem;
+	}
+
+	.button-wrapper:last-child {
+		border-radius: 0 1rem 1rem 0;
 	}
 
 	.button-wrapper.active {
